--- a/index.html
+++ b/index.html
@@ -4,9 +4,66 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style/css/style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <article>
+      <section class="largeColumn" id="wallPaper">
+        <img src="https://via.placeholder.com/250" alt="" />
+      </section>
+      <section class="largeColumn" id="category">
+        <div class="categories mediumColumn">
+          <img src="https://via.placeholder.com/150" alt="" /> <br />
+          <span>Penge</span>
+        </div>
+        <div class="categories mediumColumn">
+          <img src="https://via.placeholder.com/150" alt="" /> <br />
+          <span>Textil</span>
+        </div>
+        <div class="categories mediumColumn">
+          <img src="https://via.placeholder.com/150" alt="" /> <br />
+          <span>føde</span>
+        </div>
+      </section>
+      <section class="largeColumn" id="donation">
+        <div class="bigColumn" id="video">
+          <img src="https://via.placeholder.com/350" alt="" />
+        </div>
+        <div class="bigColumn" id="donator">
+          <button>GIV DONATION</button> <br />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi est
+            illo asperiores voluptates maiores, magni neque nesciunt veritatis
+            laborum libero saepe provident nostrum atque perspiciatis recusandae
+            corporis omnis esse illum.
+          </p>
+        </div>
+      </section>
+      <section class="largeColumn" id="donationInfo">
+        <div class="information">
+          <img src="https://via.placeholder.com/150" alt="" />
+        </div>
+        <div class="information">
+          <img src="https://via.placeholder.com/150" alt="" />
+        </div>
+        <div class="information">
+          <img src="https://via.placeholder.com/150" alt="" />
+        </div>
+        <div class="information">
+          <img src="https://via.placeholder.com/150" alt="" />
+        </div>
+      </section>
+
+      <section class="largeColumn" id="gallery">
+        <img src="https://via.placeholder.com/350" alt="" />
+        <img src="https://via.placeholder.com/350" alt="" />
+        <img src="https://via.placeholder.com/350" alt="" />
+        <img src="https://via.placeholder.com/350" alt="" />
+      </section>
+      <footer class="largeColumn"></footer>
+    </article>
+  </body>
 
   <script src="app.js"></script>
 </html>
