--- a/dashboard.html
+++ b/dashboard.html
@@ -13,9 +13,9 @@
         <img src="https://via.placeholder.com/150" alt="" />
 
         <ul class="menu">
-          <li> <a href="">OVERSIGT</a> </li>
-          <li> <a href="">DETALJER</a></li>
-          <li> <a href="">INDSTILLINGER</a></li>
+          <li> <a href="dashboard.html">OVERSIGT</a> </li>
+          <li> <a href="details.html">DETALJER</a></li>
+          <li> <a href="settings.html">INDSTILLINGER</a></li>
         </ul>
       </nav>
       <article class="largeColumn" id="dashboard">
@@ -25,25 +25,25 @@
         </header>
         <section class="largeColumn donated">
           <h1 class="largeColumn">DONER I ALT</h1>
-          <div class="category mediumColumn">
+          <div class="category smallColumn">
             <img src="https://via.placeholder.com/150" alt="" />
           </div>
-          <div class="category mediumColumn">
+          <div class="category smallColumn">
             <img src="https://via.placeholder.com/150" alt="" />
           </div>
-          <div class="category mediumColumn">
+          <div class="category smallColumn">
             <img src="https://via.placeholder.com/150" alt="" />
           </div>
         </section>
         <section class="largeColumn donated">
                 <h1 class="largeColumn">NYESTE DONATIONER</h1>
-                <div class="category mediumColumn">
+                <div class="category smallColumn">
                   <img src="https://via.placeholder.com/150" alt="" />
                 </div>
-                <div class="category mediumColumn">
+                <div class="category smallColumn">
                   <img src="https://via.placeholder.com/150" alt="" />
                 </div>
-                <div class="category mediumColumn">
+                <div class="category smallColumn">
                   <img src="https://via.placeholder.com/150" alt="" />
         </section>
         <footer class="largeColumn"></footer>
