--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style/css/style.css" />
+    <script src="https://www.gstatic.com/firebasejs/5.5.9/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.5.9/firebase-firestore.js"></script>
     <title>Document</title>
   </head>
   <body>
@@ -13,15 +15,15 @@
         <img src="https://via.placeholder.com/250" alt="" />
       </section>
       <section class="largeColumn" id="category">
-        <div class="categories mediumColumn">
+        <div class="categories smallColumn">
           <img src="https://via.placeholder.com/150" alt="" /> <br />
           <span>Penge</span>
         </div>
-        <div class="categories mediumColumn">
+        <div class="categories smallColumn">
           <img src="https://via.placeholder.com/150" alt="" /> <br />
           <span>Textil</span>
         </div>
-        <div class="categories mediumColumn">
+        <div class="categories smallColumn">
           <img src="https://via.placeholder.com/150" alt="" /> <br />
           <span>føde</span>
         </div>
