donation in work

--- a/index.html
+++ b/index.html
@@ -14,9 +14,40 @@
       <form id="add-cafe-form">
         <input type="text" name="name" placeholder="fornavn" />
         <input type="text" name="lastname" placeholder="efternavn" />
+        <input type="text" name="email" placeholder="din email" />
         <input type="text" name="amount" placeholder="penge beløb" />
+        <select name="country">
+          <option value="sjælland">Sjælland</option>
+          <option value="jylland">Jylland</option>
+          <option value="fyn">Fyn</option>
+        </select>
+        <select name="textil">
+          <option value="">Vælg textil & tilbehør type</option>
+          <option value="tæpper">Tæpper</option>
+          <option value="tøj">Tøj</option>
+          <option value="hundedækken">Hundedækken</option>
+          <option value="hundekurv">Hundekurv</option>
+          <option value="tilbehør til hunde">Tilbehør til hunde</option>
+        </select>
 
-        <button>Add Cafe</button>
+        <select name="pleje">
+          <option value="">Vælg foder & pleje</option>
+          <option value="hundefoder"> Hundefoder </option>
+          <option value="hundegodbidder">Hundegodbidder</option>
+          <option value="loppekur">Loppekur</option>
+          <option value="ormekur">Ormekur</option>
+        </select>
+        <button id="giveDonation">GIV DONATION</button>
+        <button id="textil">vælg textil & tilbehør type</button>
+        <div class="textil">
+          Tæpper<input type="text" name="tæpper" /> <br />
+          Tøj <input type="text" name="Tøj" /> <br />
+          Hundedækken <input type="text" name="Hundedækken" /> <br />
+          Hundekurv <input type="text" name="Hundekurv" /> <br />
+          Tilbehør til hunde<input type="text" name="Tilbehør" />
+
+          <button id="test">test</button>
+        </div>
       </form>
     </div>
     <article>
@@ -81,7 +112,6 @@
 
   <script>
     const form = document.querySelector("#add-cafe-form");
-
     document.querySelector(".donation").addEventListener("click", () => {
       document.querySelector(".popUp").style.display = "block";
     });
@@ -89,10 +119,32 @@
     // saving data
     form.addEventListener("submit", e => {
       e.preventDefault();
-      db.collection("donations").add({
-        firstname: form.name.value,
-        lastname: form.lastname.value,
-        amount: form.amount.value
+
+      document.querySelector("#textil").addEventListener("click", () => {
+        document.querySelector(".textil").style.display = "block";
+      });
+
+      document.querySelector("#test").addEventListener("click", () => {
+        console.log(form.tæpper.value.length);
+      });
+
+      document.querySelector("#giveDonation").addEventListener("click", () => {
+        db.collection("donations").add({
+          firstname: form.name.value,
+          lastname: form.lastname.value,
+          email: form.email.value,
+          country: form.country.value,
+          attend: form.pleje.value,
+          amount: form.amount.value
+        });
+
+        form.name.value = "";
+        form.lastname.value = "";
+        form.email.value = "";
+        form.country.value = "";
+        form.textil.value = "";
+        form.pleje.value = "";
+        form.amount.value = "";
       });
     });
   </script>
