--- a/index.html
+++ b/index.html
@@ -52,25 +52,28 @@
     </div>
     <article>
       <section class="largeColumn" id="wallPaper">
-        <img src="https://via.placeholder.com/250" alt="" />
+        <img src="image/logo.svg" alt="" />
       </section>
       <section class="largeColumn" id="category">
         <div class="categories smallColumn">
-          <img src="https://via.placeholder.com/150" alt="" /> <br />
+          <img class="penge" src="image/icon_penge_kategori.svg" alt="" />
+          <br />
           <span>Penge</span>
         </div>
         <div class="categories smallColumn">
-          <img src="https://via.placeholder.com/150" alt="" /> <br />
-          <span>Textil</span>
+          <img class="tekstil" src="image/icon_tekstil_kategori.svg" alt="" />
+          <br />
+          <span>Textil & Tilbehør</span>
         </div>
         <div class="categories smallColumn">
-          <img src="https://via.placeholder.com/150" alt="" /> <br />
-          <span>føde</span>
+          <img class="foder" src="image/icon_foder_donation.svg" alt="" />
+          <br />
+          <span>Foder & Pleje</span>
         </div>
       </section>
       <section class="largeColumn" id="donation">
         <div class="bigColumn" id="video">
-          <img src="https://via.placeholder.com/350" alt="" />
+          <img class="video" src="image/video.jpg" alt="" />
         </div>
 
         <div class="bigColumn" id="donator">
