--- a/index.html
+++ b/index.html
@@ -87,25 +87,17 @@
         </div>
       </section>
       <section class="largeColumn" id="donationInfo">
-        <div class="information">
-          <img src="https://via.placeholder.com/150" alt="" />
-        </div>
-        <div class="information">
-          <img src="https://via.placeholder.com/150" alt="" />
-        </div>
-        <div class="information">
-          <img src="https://via.placeholder.com/150" alt="" />
-        </div>
-        <div class="information">
-          <img src="https://via.placeholder.com/150" alt="" />
-        </div>
+        <div class="information"><img src="image/icon_maal.svg" alt="" /></div>
+        <div class="information"><img src="image/icon_penge.svg" alt="" /></div>
+        <div class="information"><img src="image/icon_mand.svg" alt="" /></div>
+        <div class="information"><img src="image/icon_dato.svg" alt="" /></div>
       </section>
 
       <section class="largeColumn" id="gallery">
-        <img src="https://via.placeholder.com/350" alt="" />
-        <img src="https://via.placeholder.com/350" alt="" />
-        <img src="https://via.placeholder.com/350" alt="" />
-        <img src="https://via.placeholder.com/350" alt="" />
+        <img class="imgIndex" src="image/img-04.jpg" alt="" />
+        <img class="imgIndex" src="image/img-01.jpg" alt="" />
+        <img class="imgIndex" src="image/img-02.jpg" alt="" />
+        <img class="imgIndex" src="image/img-03.jpg" alt="" />
       </section>
       <footer class="largeColumn"></footer>
     </article>
