--- a/index.html
+++ b/index.html
@@ -87,10 +87,21 @@
         </div>
       </section>
       <section class="largeColumn" id="donationInfo">
-        <div class="information"><img src="image/icon_maal.svg" alt="" /></div>
-        <div class="information"><img src="image/icon_penge.svg" alt="" /></div>
-        <div class="information"><img src="image/icon_mand.svg" alt="" /></div>
-        <div class="information"><img src="image/icon_dato.svg" alt="" /></div>
+        <div class="information">
+          MÅL<img src="image/icon_maal.svg" alt="" />100.000 DKK
+        </div>
+
+        <div class="information">
+          INDSAMLET<img src="image/icon_penge.svg" alt="" />65.000 DKK
+        </div>
+
+        <div class="information">
+          SENESTE DONATION<img src="image/icon_mand.svg" alt="" />Anonym 125 DKK
+        </div>
+
+        <div class="information">
+          TID TILBAGE<img src="image/icon_dato.svg" alt="" />23.11.56.04
+        </div>
       </section>
 
       <section class="largeColumn" id="gallery">
