flere css tilpasninger

--- a/index.html
+++ b/index.html
@@ -58,17 +58,17 @@
         <div class="categories smallColumn">
           <img class="penge" src="image/icon_penge_kategori.svg" alt="" />
           <br />
-          <span>Penge</span>
+          <span>PENGE</span>
         </div>
         <div class="categories smallColumn">
           <img class="tekstil" src="image/icon_tekstil_kategori.svg" alt="" />
           <br />
-          <span>Textil & Tilbehør</span>
+          <span>TEKSTIL & TILBEHØR</span>
         </div>
         <div class="categories smallColumn">
           <img class="foder" src="image/icon_foder_donation.svg" alt="" />
           <br />
-          <span>Foder & Pleje</span>
+          <span>FODER & PLEJE</span>
         </div>
       </section>
       <section class="largeColumn" id="donation">
@@ -110,7 +110,18 @@
         <img class="imgIndex" src="image/img-02.jpg" alt="" />
         <img class="imgIndex" src="image/img-03.jpg" alt="" />
       </section>
-      <footer class="largeColumn"></footer>
+      <footer class="largeColumn">
+        <h2>GET IN TOUCH</h2>
+        <p class="mail">STØT@HUNDOGHJEMLØS.DK</p>
+        <h2>Phone <br>
+            +45 41441015</h2>
+        <div class="some">
+            <a href="#"></a><img src="image/some-01.svg"></a>
+            <a href="#"><img src="image/some-02.svg"></a>
+            <a href="#"><img src="image/some-03.svg"></a>
+        </div>
+    </div>
+      </footer>
     </article>
   </body>
 
