--- a/dashboard.html
+++ b/dashboard.html
@@ -10,41 +10,43 @@
   <body>
     <div id="wrapper">
       <nav>
-        <img src="https://via.placeholder.com/150" alt="" />
+        <img src="image/logo.svg" alt="" />
 
         <ul class="menu">
-          <li> <a href="dashboard.html">OVERSIGT</a> </li>
-          <li> <a href="details.html">DETALJER</a></li>
-          <li> <a href="settings.html">INDSTILLINGER</a></li>
+          <li><img src="image/icon_oversigt.svg"> <a href="dashboard.html">OVERSIGT</a> </li>
+          <li><img src="image/icon_detaljer.svg"> <a href="details.html">DETALJER</a></li>
+          <li><img src="image/icon_settings.svg"> <a href="settings.html">INDSTILLINGER</a></li>
         </ul>
       </nav>
       <article class="largeColumn" id="dashboard">
         <header class="largeColumn">
-                <img src="https://via.placeholder.com/150" alt="" />
+                <img src="image/icon_oversigt.svg" alt="" /><br>
                 <h1>FUNDRAISER <br> OVERSIGT</h1>
         </header>
         <section class="largeColumn donated">
-          <h1 class="largeColumn">DONER I ALT</h1>
-          <div class="category smallColumn">
-            <img src="https://via.placeholder.com/150" alt="" />
+          <h1 class="largeColumn">DONERET I ALT</h1>
+          <div class="category smallColumnDb">
+            <img class="pengeDb" src="image/icon_penge_kategori.svg" alt="" /><br>PENGE<br>65.000 DKK
           </div>
-          <div class="category smallColumn">
-            <img src="https://via.placeholder.com/150" alt="" />
+          <div class="category smallColumnDb">
+            <img src="image/icon_tekstil_kategori.svg" alt="" /><br>TEXTIL & TILBEHØR<br>
+            25 tæpper, 15 kurve, <br>
+            17 jakker
           </div>
-          <div class="category smallColumn">
-            <img src="https://via.placeholder.com/150" alt="" />
+          <div class="category smallColumnDb">
+            <img src="image/icon_foder_donation.svg" alt="" /><br>FODER & PLEJE
           </div>
         </section>
         <section class="largeColumn donated">
                 <h1 class="largeColumn">NYESTE DONATIONER</h1>
-                <div class="category smallColumn">
-                  <img src="https://via.placeholder.com/150" alt="" />
+                <div class="category smallColumnDb">
+                  <img src="image/icon_mand.svg" alt="" /><br>Anonym 125 DKK
                 </div>
-                <div class="category smallColumn">
-                  <img src="https://via.placeholder.com/150" alt="" />
+                <div class="category smallColumnDb">
+                  <img src="image/icon_mand.svg" alt="" /><br>Anonym 125 DKK
                 </div>
-                <div class="category smallColumn">
-                  <img src="https://via.placeholder.com/150" alt="" />
+                <div class="category smallColumnDb">
+                  <img src="image/icon_mand.svg" alt="" /><br>Anonym 125 DKK
         </section>
         <footer class="largeColumn"></footer>
       </article>
