--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
       </section>
       <section class="largeColumn" id="donationInfo">
         <div class="information">
-          MÅL<img src="image/icon_maal.svg" alt="" />100.000 DKK
+          MÅL<img src="image/icon_maal.svg" alt="" /> <p class="goal">100.000 DKK</p> 
         </div>
 
         <div class="information">
-          INDSAMLET<img src="image/icon_penge.svg" alt="" />65.000 DKK
+          INDSAMLET<img src="image/icon_penge.svg" alt="" /><p class="indsamlet"></p>
         </div>
 
         <div class="information">
@@ -99,7 +99,7 @@
         </div>
 
         <div class="information">
-          TID TILBAGE<img src="image/icon_dato.svg" alt="" />23.11.56.04
+          TID TILBAGE<img src="image/icon_dato.svg" alt="" /> <p id="demo">23.11.56.04</p> 
         </div>
       </section>
 
@@ -127,12 +127,14 @@
   <script src="app.js"></script>
 
   <script>
-
+    let fundraisertest = [];
+    let fundraiser = [];
      let fyn = [];
       let jylland = [];
       let sjaelland = [];
-      let sum = 0;
+      let sum;
       let fullAmount = [];
+      let moneyAmount = 0;
       let donations = [];
     const form = document.querySelector("#add-cafe-form");
     document.querySelector(".donation").addEventListener("click", () => {
@@ -145,20 +147,48 @@
               donations.push(doc.data());
             });
             count();
+            test();
+           
+          });
+
+
+// med limits (kun 1 visning den nyeste )
+ db.collection("donations").limit(1)
+          .get()
+          .then(snapshot => {
+            snapshot.docs.forEach(doc => {
+              fundraisertest.push(doc.data());
+            });
+ 
           });
 
 
 
 
+
+db.collection("fundraise")
+          .get()
+          .then(snapshot => {
+            snapshot.docs.forEach(doc => {
+              fundraiser.push(doc.data());
+            });
+          document.querySelector(".goal").textContent = fundraiser[0].goal + " DKK";
+          });
+
+
           function count() {
         donations.forEach(amount => {
-         console.log(amount.amount); 
-
          if(amount.amount > 0) {
           fullAmount.push(amount.amount);
-         }
-         
-        });
+         }    
+        }); 
+      }
+
+      function test() {
+       fullAmount.forEach(sum => {
+         moneyAmount = moneyAmount + parseInt(fullAmount);
+       })
+       document.querySelector(".indsamlet").textContent = moneyAmount + " DKK";
       }
     // saving data
     form.addEventListener("submit", e => {  e.preventDefault();
@@ -181,5 +211,36 @@
         form.amount.value = "";
       });
     });
+
+
+
+
+    var countDownDate = new Date("Jan 5, 2019 15:37:25").getTime();
+
+// Update the count down every 1 second
+var x = setInterval(function() {
+
+  // Get todays date and time
+  var now = new Date().getTime();
+
+  // Find the distance between now and the count down date
+  var distance = countDownDate - now;
+
+  // Time calculations for days, hours, minutes and seconds
+  var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+  var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+  var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+  var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+  // Display the result in the element with id="demo"
+  document.getElementById("demo").innerHTML = days + "d " + hours + "h "
+  + minutes + "m " + seconds + "s ";
+
+  // If the count down is finished, write some text 
+  if (distance < 0) {
+    clearInterval(x);
+    document.getElementById("demo").innerHTML = "EXPIRED";
+  }
+}, 1000);
   </script>
 </html>
