--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <img class="imgIndex" src="image/img-02.jpg" alt="" />
         <img class="imgIndex" src="image/img-03.jpg" alt="" />
       </section>
-      <footer class="largeColumn">
+      <footerIndex class="largeColumn">
         <h2>GET IN TOUCH</h2>
         <p class="mail">STØT@HUNDOGHJEMLØS.DK</p>
         <h2>Phone <br>
