--- a/login.html
+++ b/login.html
@@ -7,12 +7,16 @@
 
     <script src="https://www.gstatic.com/firebasejs/5.5.9/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.5.9/firebase-firestore.js"></script>
+    <link rel="stylesheet" href="style/css/style.css" />
     <title>Document</title>
   </head>
-  <body>
-    <input type="text" id="username" placeholder="username" /> <br />
-    <input type="text" id="password" placeholder="password" /> <br />
-    <button id="login">Login</button>
+  <body id="login">
+    <div class="wrapper">
+      <img src="image/logo.svg" alt="" />
+      <input type="text" id="username" placeholder="username" /> <br />
+      <input type="text" id="password" placeholder="password" /> <br />
+      <button id="login">Login</button>
+    </div>
   </body>
   <script src="app.js"></script>
   <script>
