--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
             </form>
 
             <div class="done">
-              <h2>et kæmpe tak for din donation</h2>
-              <span>du gør en forskel</span>
+              <h2>Et kæmpe tak for din donation</h2>
+              <span>Du gør en forskel</span>
               <img src="image/tak_img.jpg" alt="">
               <div class="buttons">
-                  <button>Del på instagram</button>
-                  <button>Del på facebook</button>
+                  <button class="insta"><img src="image/some-02.svg"><div class="positionSome"> Del på<br> Instagram</div></button>
+                  <button class="fB"><img src="image/some-03.svg"><div class="positionSome"> Del på<br> Facebook</div></button>
               </div>
               
               
