--- a/login.html
+++ b/login.html
@@ -12,10 +12,29 @@
   </head>
   <body id="login">
     <div class="wrapper">
-      <img src="image/logo.svg" alt="" />
-      <input type="text" id="username" placeholder="username" /> <br />
-      <input type="text" id="password" placeholder="password" /> <br />
-      <button id="login">Login</button>
+      <div class="loginBox">
+        <img src="image/logo.svg" alt="" /><br />
+        <h2>Brugernavn</h2>
+        <input
+          class="pengePlacering"
+          type="text"
+          id="username"
+          placeholder=""
+        />
+        <br />
+        <h2>Password</h2>
+        <input
+          class="pengePlacering"
+          type="text"
+          id="password"
+          placeholder=""
+        />
+        <br />
+        <div class="bottomLogin">
+          <button id="login">Login</button>
+          <p>Gå tilbage til Fundraiser landingpage</p>
+        </div>
+      </div>
     </div>
   </body>
   <script src="app.js"></script>
