--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
       <div class="popUp">
           <div class="headerPopUp"><img src="image/logo.svg">
-          <button class="close">luk vindue</button>
+          <button class="close">Luk vindue</button>
           </div>
           <form id="add-cafe-form">
             <div class="rightForm">
@@ -29,7 +29,8 @@
             </select>
           
           <img src="image/donation1_img.jpg"></div>
-            <div class="leftForm"><img src="image/icon_penge_kategori.svg"><br><input class="pengePlacering" type="text" name="amount" placeholder="Indtast beløb i DKK" /><br>
+            <div class="leftForm"><img class="img" src="image/icon_penge_kategori.svg"><br><input class="pengePlacering" type="text" name="amount" placeholder="Indtast beløb i DKK" /><br>
+              <img class="kort" src="image/kort-01.jpg">
     
               <div id="betalingDropdown">
                 Kortholders fulde navn<br>
