--- a/settings.html
+++ b/settings.html
@@ -27,7 +27,7 @@
           </li>
         </ul>
       </nav>
-      <article class="largeColumn" id="dashboard">
+      <article class="largeColumn mobileSetting" id="dashboard">
         <header class="largeColumn">
           <img src="image/icon_oversigt.svg" alt="" /><br />
           <h1>
